Fixing wrong position of source codes line numbers at HTML tree, fixing Net panel POST and URL parameters styling, fixing console.warn messages.
git-svn-id: http://fbug.googlecode.com/svn/lite@6659 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/branches/firebug1.3/skin/xp/firebug.css
+++ b/branches/firebug1.3/skin/xp/firebug.css
@@ -946,12 +946,17 @@ h1.groupHeader {
 }
 
 .netInfoParamName {
-    padding: 0 10px 0 0;
+    padding-right: 10px;
     font-family: Lucida Grande, Tahoma, sans-serif;
     font-weight: bold;
     vertical-align: top;
     text-align: right;
     white-space: nowrap;
+}
+
+.netInfoPostText .netInfoParamName {
+    width: 1px; /* Google Chrome need this otherwise the first column of 
+                   the post variables table will be larger than expected */
 }
 
 .netInfoParamValue {
@@ -2736,11 +2741,12 @@ a.fbTab:hover .fbTabR {
 /************************************************************************************************/
 div.lineNo {
     font: 1em Monaco, monospace;
-    position: absolute;
+    position: relative;
+    float: left;
     top: 0;
     left: 0;
-    margin: 0;
-    padding: 0 5px 0 20px;
+    margin: 0 5px 0 0;
+    padding: 0 5px 0 10px;
     background: #eee;
     color: #888;
     border-right: 1px solid #ccc;
@@ -2873,7 +2879,7 @@ position. if so, override it at chrome.js initialization when creating the div *
 }
 
 /************************************************************************************************/
-.logRow-info,.logRow-error,.logRow-warning {
+.logRow-info,.logRow-error,.logRow-warn {
     background: #fff no-repeat 2px 2px;
     padding-left: 20px;
     padding-bottom: 3px;
@@ -2884,7 +2890,7 @@ position. if so, override it at chrome.js initialization when creating the div *
     background-image: url(infoIcon.gif);
 }
 
-.logRow-warning {
+.logRow-warn {
     background-color: cyan;
     background-image: url(warningIcon.png) !important;
     background-image: url(warningIcon.gif);
